voxscript-language-support/out/generated/VoxScriptParser.js
"use strict";
// Generated from VoxScript.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols
Object.defineProperty(exports, "__esModule", { value: true });
exports.Var_instContext = exports.Function_paramsContext = exports.Function_postfixContext = exports.Expression_postfixContext = exports.Id_postfixContext = exports.PostfixContext = exports.IdentifierContext = exports.LambdaContext = exports.Table_keyContext = exports.Table_memberContext = exports.Table_member_listContext = exports.Table_member_dictContext = exports.Table_definitionContext = exports.ExpressionContext = exports.Type_annotationContext = exports.Cont_elseContext = exports.Cont_ifContext = exports.Cont_breakContext = exports.Cont_continueContext = exports.Cont_returnContext = exports.Cont_foreachContext = exports.Cont_forContext = exports.Cont_whileContext = exports.Func_callContext = exports.Func_defineContext = exports.Val_incrementContext = exports.Arith_assignContext = exports.Val_assignContext = exports.Var_defineContext = exports.PrintContext = exports.StatementContext = exports.BlockContext = exports.ProgramContext = void 0;
const antlr4_1 = require("antlr4");
class VoxScriptParser extends antlr4_1.Parser {
    static T__0 = 1;
    static T__1 = 2;
    static T__2 = 3;
    static T__3 = 4;
    static T__4 = 5;
    static T__5 = 6;
    static T__6 = 7;
    static T__7 = 8;
    static VAR = 9;
    static FUNC = 10;
    static FOR = 11;
    static FOREACH = 12;
    static WHILE = 13;
    static IN = 14;
    static CONTINUE = 15;
    static BREAK = 16;
    static IF = 17;
    static ELSE = 18;
    static NUMBER = 19;
    static STRING = 20;
    static BOOLEAN = 21;
    static NULL = 22;
    static TUPLE = 23;
    static TRUE = 24;
    static FALSE = 25;
    static ID = 26;
    static DISCARD = 27;
    static SEMICOLON = 28;
    static COLON = 29;
    static EXCLAMATION = 30;
    static QUOTATION = 31;
    static LEFT_PAREN = 32;
    static RIGHT_PAREN = 33;
    static LEFT_BRACE = 34;
    static RIGHT_BRACE = 35;
    static LEFT_CURLY = 36;
    static RIGHT_CURLY = 37;
    static UNARY = 38;
    static MUL_DIV = 39;
    static ADD_SUB = 40;
    static COMPARE = 41;
    static ASSIGNMENT = 42;
    static WS = 43;
    static LINE_COMMENT = 44;
    static MULTILINE_COMMENT = 45;
    static INCREMENT = 46;
    static DECREMENT = 47;
    static ADD_DIRECT = 48;
    static SUB_DIRECT = 49;
    static MULT_DIRECT = 50;
    static DIV_DIRECT = 51;
    static EXPO_DIRECT = 52;
    static MOD_DIRECT = 53;
    static COND_EQUAL = 54;
    static COND_NOTEQUAL = 55;
    static COND_GREATERTHAN = 56;
    static COND_LESSTHAN = 57;
    static COND_GREATEROREQUAL = 58;
    static COND_LESSOREQUAL = 59;
    static COND_AND = 60;
    static COND_NAND = 61;
    static COND_OR = 62;
    static COND_NOR = 63;
    static COND_XOR = 64;
    static EOF = antlr4_1.Token.EOF;
    static RULE_program = 0;
    static RULE_block = 1;
    static RULE_statement = 2;
    static RULE_print = 3;
    static RULE_var_define = 4;
    static RULE_val_assign = 5;
    static RULE_arith_assign = 6;
    static RULE_val_increment = 7;
    static RULE_func_define = 8;
    static RULE_func_call = 9;
    static RULE_cont_while = 10;
    static RULE_cont_for = 11;
    static RULE_cont_foreach = 12;
    static RULE_cont_return = 13;
    static RULE_cont_continue = 14;
    static RULE_cont_break = 15;
    static RULE_cont_if = 16;
    static RULE_cont_else = 17;
    static RULE_type_annotation = 18;
    static RULE_expression = 19;
    static RULE_table_definition = 20;
    static RULE_table_member_dict = 21;
    static RULE_table_member_list = 22;
    static RULE_table_member = 23;
    static RULE_table_key = 24;
    static RULE_lambda = 25;
    static RULE_identifier = 26;
    static RULE_postfix = 27;
    static RULE_id_postfix = 28;
    static RULE_expression_postfix = 29;
    static RULE_function_postfix = 30;
    static RULE_function_params = 31;
    static RULE_var_inst = 32;
    static literalNames = [null, "'print'",
        "','", "'='",
        "'return'",
        "'^'", "'?'",
        "'->'", "'.'",
        "'var'", "'func'",
        "'for'", "'foreach'",
        "'while'", "'in'",
        "'continue'",
        "'break'", "'if'",
        "'else'", null,
        null, null,
        "'null'", "'...'",
        "'true'", "'false'",
        null, "'_'",
        "';'", "':'",
        "'!'", "'\"'",
        "'('", "')'",
        "'['", "']'",
        "'{'", "'}'",
        null, null,
        null, null,
        null, null,
        null, null,
        "'++'", "'--'",
        "'+='", "'-='",
        "'*='", "'/='",
        "'^='", "'%='",
        "'=='", "'!='",
        "'>'", "'<'",
        "'>='", "'<='",
        "'&&'", "'!&'",
        "'||'", "'!|'",
        "'#|'"];
    static symbolicNames = [null, null,
        null, null,
        null, null,
        null, null,
        null, "VAR",
        "FUNC", "FOR",
        "FOREACH",
        "WHILE", "IN",
        "CONTINUE",
        "BREAK", "IF",
        "ELSE", "NUMBER",
        "STRING", "BOOLEAN",
        "NULL", "TUPLE",
        "TRUE", "FALSE",
        "ID", "DISCARD",
        "SEMICOLON",
        "COLON", "EXCLAMATION",
        "QUOTATION",
        "LEFT_PAREN",
        "RIGHT_PAREN",
        "LEFT_BRACE",
        "RIGHT_BRACE",
        "LEFT_CURLY",
        "RIGHT_CURLY",
        "UNARY", "MUL_DIV",
        "ADD_SUB",
        "COMPARE",
        "ASSIGNMENT",
        "WS", "LINE_COMMENT",
        "MULTILINE_COMMENT",
        "INCREMENT",
        "DECREMENT",
        "ADD_DIRECT",
        "SUB_DIRECT",
        "MULT_DIRECT",
        "DIV_DIRECT",
        "EXPO_DIRECT",
        "MOD_DIRECT",
        "COND_EQUAL",
        "COND_NOTEQUAL",
        "COND_GREATERTHAN",
        "COND_LESSTHAN",
        "COND_GREATEROREQUAL",
        "COND_LESSOREQUAL",
        "COND_AND",
        "COND_NAND",
        "COND_OR",
        "COND_NOR",
        "COND_XOR"];
    // tslint:disable:no-trailing-whitespace
    static ruleNames = [
        "program", "block", "statement", "print", "var_define", "val_assign",
        "arith_assign", "val_increment", "func_define", "func_call", "cont_while",
        "cont_for", "cont_foreach", "cont_return", "cont_continue", "cont_break",
        "cont_if", "cont_else", "type_annotation", "expression", "table_definition",
        "table_member_dict", "table_member_list", "table_member", "table_key",
        "lambda", "identifier", "postfix", "id_postfix", "expression_postfix",
        "function_postfix", "function_params", "var_inst",
    ];
    get grammarFileName() { return "VoxScript.g4"; }
    get literalNames() { return VoxScriptParser.literalNames; }
    get symbolicNames() { return VoxScriptParser.symbolicNames; }
    get ruleNames() { return VoxScriptParser.ruleNames; }
    get serializedATN() { return VoxScriptParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new antlr4_1.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new antlr4_1.ParserATNSimulator(this, VoxScriptParser._ATN, VoxScriptParser.DecisionsToDFA, new antlr4_1.PredictionContextCache());
    }
    // @RuleVersion(0)
    program() {
        let localctx = new ProgramContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, VoxScriptParser.RULE_program);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 66;
                this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    block() {
        let localctx = new BlockContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, VoxScriptParser.RULE_block);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 74;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 67354130) !== 0)) {
                    {
                        {
                            this.state = 68;
                            this.statement();
                            this.state = 70;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === 28) {
                                {
                                    this.state = 69;
                                    this.match(VoxScriptParser.SEMICOLON);
                                }
                            }
                        }
                    }
                    this.state = 76;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    statement() {
        let localctx = new StatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, VoxScriptParser.RULE_statement);
        try {
            this.state = 91;
            this._errHandler.sync(this);
            switch (this._interp.adaptivePredict(this._input, 2, this._ctx)) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 77;
                        this.var_define();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 78;
                        this.val_assign();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 79;
                        this.arith_assign();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 80;
                        this.val_increment();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(localctx, 5);
                    {
                        this.state = 81;
                        this.func_call();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(localctx, 6);
                    {
                        this.state = 82;
                        this.func_define();
                    }
                    break;
                case 7:
                    this.enterOuterAlt(localctx, 7);
                    {
                        this.state = 83;
                        this.cont_return();
                    }
                    break;
                case 8:
                    this.enterOuterAlt(localctx, 8);
                    {
                        this.state = 84;
                        this.cont_continue();
                    }
                    break;
                case 9:
                    this.enterOuterAlt(localctx, 9);
                    {
                        this.state = 85;
                        this.cont_break();
                    }
                    break;
                case 10:
                    this.enterOuterAlt(localctx, 10);
                    {
                        this.state = 86;
                        this.cont_while();
                    }
                    break;
                case 11:
                    this.enterOuterAlt(localctx, 11);
                    {
                        this.state = 87;
                        this.cont_for();
                    }
                    break;
                case 12:
                    this.enterOuterAlt(localctx, 12);
                    {
                        this.state = 88;
                        this.cont_foreach();
                    }
                    break;
                case 13:
                    this.enterOuterAlt(localctx, 13);
                    {
                        this.state = 89;
                        this.cont_if();
                    }
                    break;
                case 14:
                    this.enterOuterAlt(localctx, 14);
                    {
                        this.state = 90;
                        this.print();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    print() {
        let localctx = new PrintContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, VoxScriptParser.RULE_print);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 93;
                this.match(VoxScriptParser.T__0);
                this.state = 94;
                this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    var_define() {
        let localctx = new Var_defineContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, VoxScriptParser.RULE_var_define);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 96;
                this.match(VoxScriptParser.VAR);
                this.state = 97;
                this.var_inst();
                this.state = 102;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === 2) {
                    {
                        {
                            this.state = 98;
                            this.match(VoxScriptParser.T__1);
                            this.state = 99;
                            this.var_inst();
                        }
                    }
                    this.state = 104;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 105;
                this.match(VoxScriptParser.T__2);
                this.state = 106;
                this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    val_assign() {
        let localctx = new Val_assignContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, VoxScriptParser.RULE_val_assign);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 108;
                this.identifier();
                this.state = 109;
                this.match(VoxScriptParser.T__2);
                this.state = 110;
                this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    arith_assign() {
        let localctx = new Arith_assignContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, VoxScriptParser.RULE_arith_assign);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 112;
                this.identifier();
                this.state = 113;
                this.match(VoxScriptParser.ASSIGNMENT);
                this.state = 114;
                this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    val_increment() {
        let localctx = new Val_incrementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, VoxScriptParser.RULE_val_increment);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 116;
                this.identifier();
                this.state = 117;
                _la = this._input.LA(1);
                if (!(_la === 46 || _la === 47)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    func_define() {
        let localctx = new Func_defineContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, VoxScriptParser.RULE_func_define);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 119;
                this.match(VoxScriptParser.FUNC);
                this.state = 120;
                this.match(VoxScriptParser.ID);
                this.state = 121;
                this.function_params();
                this.state = 123;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 29) {
                    {
                        this.state = 122;
                        this.type_annotation();
                    }
                }
                this.state = 125;
                this.match(VoxScriptParser.LEFT_CURLY);
                this.state = 126;
                this.block();
                this.state = 127;
                this.match(VoxScriptParser.RIGHT_CURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    func_call() {
        let localctx = new Func_callContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, VoxScriptParser.RULE_func_call);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 129;
                this.identifier();
                this.state = 130;
                this.function_postfix();
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_while() {
        let localctx = new Cont_whileContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, VoxScriptParser.RULE_cont_while);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 132;
                this.match(VoxScriptParser.WHILE);
                this.state = 133;
                this.match(VoxScriptParser.LEFT_PAREN);
                this.state = 134;
                this.expression(0);
                this.state = 135;
                this.match(VoxScriptParser.RIGHT_PAREN);
                this.state = 136;
                this.match(VoxScriptParser.LEFT_CURLY);
                this.state = 137;
                this.block();
                this.state = 138;
                this.match(VoxScriptParser.RIGHT_CURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_for() {
        let localctx = new Cont_forContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, VoxScriptParser.RULE_cont_for);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 140;
                this.match(VoxScriptParser.FOR);
                this.state = 141;
                this.match(VoxScriptParser.LEFT_PAREN);
                this.state = 142;
                this.match(VoxScriptParser.ID);
                this.state = 143;
                this.match(VoxScriptParser.T__2);
                this.state = 144;
                this.expression(0);
                this.state = 145;
                this.match(VoxScriptParser.T__1);
                this.state = 146;
                this.expression(0);
                this.state = 147;
                this.match(VoxScriptParser.T__1);
                this.state = 148;
                this.expression(0);
                this.state = 149;
                this.match(VoxScriptParser.RIGHT_PAREN);
                this.state = 150;
                this.match(VoxScriptParser.LEFT_CURLY);
                this.state = 151;
                this.block();
                this.state = 152;
                this.match(VoxScriptParser.RIGHT_CURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_foreach() {
        let localctx = new Cont_foreachContext(this, this._ctx, this.state);
        this.enterRule(localctx, 24, VoxScriptParser.RULE_cont_foreach);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 154;
                this.match(VoxScriptParser.FOREACH);
                this.state = 155;
                this.match(VoxScriptParser.LEFT_PAREN);
                this.state = 156;
                this.var_inst();
                this.state = 157;
                this.match(VoxScriptParser.T__1);
                this.state = 158;
                this.var_inst();
                this.state = 159;
                this.match(VoxScriptParser.IN);
                this.state = 160;
                this.expression(0);
                this.state = 161;
                this.match(VoxScriptParser.RIGHT_PAREN);
                this.state = 162;
                this.match(VoxScriptParser.LEFT_CURLY);
                this.state = 163;
                this.block();
                this.state = 164;
                this.match(VoxScriptParser.RIGHT_CURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_return() {
        let localctx = new Cont_returnContext(this, this._ctx, this.state);
        this.enterRule(localctx, 26, VoxScriptParser.RULE_cont_return);
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 166;
                this.match(VoxScriptParser.T__3);
                this.state = 175;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 6, this._ctx)) {
                    case 1:
                        {
                            this.state = 167;
                            this.expression(0);
                            this.state = 172;
                            this._errHandler.sync(this);
                            _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                            while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 168;
                                            this.match(VoxScriptParser.T__1);
                                            this.state = 169;
                                            this.expression(0);
                                        }
                                    }
                                }
                                this.state = 174;
                                this._errHandler.sync(this);
                                _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                            }
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_continue() {
        let localctx = new Cont_continueContext(this, this._ctx, this.state);
        this.enterRule(localctx, 28, VoxScriptParser.RULE_cont_continue);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 177;
                this.match(VoxScriptParser.CONTINUE);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_break() {
        let localctx = new Cont_breakContext(this, this._ctx, this.state);
        this.enterRule(localctx, 30, VoxScriptParser.RULE_cont_break);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 179;
                this.match(VoxScriptParser.BREAK);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_if() {
        let localctx = new Cont_ifContext(this, this._ctx, this.state);
        this.enterRule(localctx, 32, VoxScriptParser.RULE_cont_if);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 181;
                this.match(VoxScriptParser.IF);
                this.state = 182;
                this.match(VoxScriptParser.LEFT_PAREN);
                this.state = 183;
                this.expression(0);
                this.state = 184;
                this.match(VoxScriptParser.RIGHT_PAREN);
                this.state = 190;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case 1:
                    case 4:
                    case 9:
                    case 10:
                    case 11:
                    case 12:
                    case 13:
                    case 15:
                    case 16:
                    case 17:
                    case 26:
                        {
                            this.state = 185;
                            this.statement();
                        }
                        break;
                    case 36:
                        {
                            this.state = 186;
                            this.match(VoxScriptParser.LEFT_CURLY);
                            this.state = 187;
                            this.block();
                            this.state = 188;
                            this.match(VoxScriptParser.RIGHT_CURLY);
                        }
                        break;
                    default:
                        throw new antlr4_1.NoViableAltException(this);
                }
                this.state = 193;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 8, this._ctx)) {
                    case 1:
                        {
                            this.state = 192;
                            this.cont_else();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    cont_else() {
        let localctx = new Cont_elseContext(this, this._ctx, this.state);
        this.enterRule(localctx, 34, VoxScriptParser.RULE_cont_else);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 195;
                this.match(VoxScriptParser.ELSE);
                this.state = 201;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case 1:
                    case 4:
                    case 9:
                    case 10:
                    case 11:
                    case 12:
                    case 13:
                    case 15:
                    case 16:
                    case 17:
                    case 26:
                        {
                            this.state = 196;
                            this.statement();
                        }
                        break;
                    case 36:
                        {
                            this.state = 197;
                            this.match(VoxScriptParser.LEFT_CURLY);
                            this.state = 198;
                            this.block();
                            this.state = 199;
                            this.match(VoxScriptParser.RIGHT_CURLY);
                        }
                        break;
                    default:
                        throw new antlr4_1.NoViableAltException(this);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    type_annotation() {
        let localctx = new Type_annotationContext(this, this._ctx, this.state);
        this.enterRule(localctx, 36, VoxScriptParser.RULE_type_annotation);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 203;
                this.match(VoxScriptParser.COLON);
                this.state = 204;
                this.match(VoxScriptParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    expression(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let localctx = new ExpressionContext(this, this._ctx, _parentState);
        let _prevctx = localctx;
        let _startState = 38;
        this.enterRecursionRule(localctx, 38, VoxScriptParser.RULE_expression, _p);
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 221;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 10, this._ctx)) {
                    case 1:
                        {
                            this.state = 207;
                            this.match(VoxScriptParser.LEFT_PAREN);
                            this.state = 208;
                            localctx._paren = this.expression(0);
                            this.state = 209;
                            this.match(VoxScriptParser.RIGHT_PAREN);
                        }
